fixed images by wrapping in required

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,5 +1,5 @@
 .Navbar {
-    background-color: black;
+    background-color: grey;
     overflow: hidden;
   }
   
